--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -2,6 +2,7 @@
   <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="referrer" content="no-referrer">
 <title>External link</title>
 
 <script type="text/javascript">
